<resources>
    <string name="app_name">FooDish</string>
    <string name="welcome_to_foodish">Welcome to FooDish!</string>
    <string name="todo">TODO</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="type_your_email">Type your Email</string>
    <string name="home" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mission">Mission</string>
    <string name="vision">Vision</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_expense_name">Edit Expense Name</string>
    <string name="edit_expense_amount_php">Edit Expense Amount (PHP)</string>
    <string name="expense_text">Expense Text</string>
    <string name="foodish_description">FooDish is a Filipino food recipe application that provide users with a wide range of recipes typically for breakfast,lunch, and dinner meals. A list of recipes and food-related images make up the application that aims to simplify and help user enhance their cooking experience by providing a diverse array of recipe along with helpful features to help improve their cooking skills.</string>
    <string name="foodish_title">About FooDish</string>
    <string name="james">Menard James Sayson\nBachelor of Information and Technology Programming\nsmenardjames@gmail.com</string>
    <string name="mharvin">Mharvin Caramat\nBachelor of Information and Technology Programming\ncaramatmharvin@gmail.com</string>
    <string name="aljon">Aljon Gutierrez\nBachelor of Information and Technology Programming\naljongutierrez08@gmail.com</string>
    <string name="julius">Julius Adrian Ramos\nBachelor of Information and Technology Programming\njuliuscervantesramos@gmail.com</string>
    <string name="alexander">John Alexander Vargas\nBachelor of Information and Technology Programming\njobe.vargas.up@phinmaed.com</string>
    <string name="foodish_mission">Our mission is to make Filipino culinary heritage accessible and enjoyable. We offer a diverse range of recipes, food imagery, and a user-friendly platform to promote a passion for cooking and culinary creativity.</string>
    <string name="foodish_vision">Our vision is to be the top choice for all seeking Filipino culinary exploration. We aim to evolve our app into a community for passionate home cooks and food enthusiasts. We envision FooDish as a symbol of culinary inspiration, offering a wide range of recipes and innovative features for users from all backgrounds.</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="todoa">TODO</string>
    <string name="to">To</string>
    <string name="convert">Convert</string>
    <string name="from">From</string>
    <string name="enter_the_amount">Amount</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="result">Result</string>
    <string name="title_activity_bottom2">Bottom2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="foodish_is_a_filipino_food_recipe_application_that_provide_users_with_a_wide_range_of_recipes_typically_for_breakfast_lunch_and_dinner_meals_a_list_of_recipes_and_food_related_images_make_up_the_application_that_aims_to_simplify_and_help_user_enhance_their_cooking_experience_by_providing_a_diverse_array_of_recipe_along_with_helpful_features_to_help_improve_their_cooking_skills">FooDish is a Filipino food recipe application that provide users with a wide range of recipes typically for breakfast,lunch, and dinner meals. A list of recipes and food-related images make up the application that aims to simplify and help user enhance their cooking experience by providing a diverse array of recipe along with helpful features to help improve their cooking skills.</string>
    <string name="about_foodish">About FooDish</string>
    <string name="our_team">Our Team</string>
    <string name="menard_james_sayson_nbachelor_of_information_and_technology_programming_nsmenardjames_gmail_com">Menard James Sayson\nBachelor of Information and Technology Programming\nsmenardjames@gmail.com</string>
    <string name="mharvin_caramat_nbachelor_of_information_and_technology_programming_ncaramatmharvin_gmail_com">Mharvin Caramat\nBachelor of Information and Technology Programming\ncaramatmharvin@gmail.com</string>
    <string name="aljon_gutierrez_nbachelor_of_information_and_technology_programming_naljongutierrez08_gmail_com">Aljon Gutierrez\nBachelor of Information and Technology Programming\naljongutierrez08@gmail.com</string>
    <string name="julius_adrian_ramos_nbachelor_of_information_and_technology_programming_njuliuscervantesramos_gmail_com">Julius Adrian Ramos\nBachelor of Information and Technology Programming\njuliuscervantesramos@gmail.com</string>
    <string name="john_alexander_vargas_nbachelor_of_information_and_technology_programming_njobe_vargas_up_phinmaed_com">John Alexander Vargas\nBachelor of Information and Technology Programming\njobe.vargas.up@phinmaed.com</string>
    <string name="pork_adobo">Pork Adobo</string>
    <string name="top_picks">Top picks</string>
    <string name="tinola">Tinola</string>
    <string name="menudo">Menudo</string>
    <string name="sinigang">Pork Sinigang</string>
    <string name="pork_sisig">Pork Sisig</string>
    <string name="category">Category</string>
    <string name="adobos">Adobos</string>
    <string name="sinigangs">Sinigangs</string>
    <string name="sisigs">Sisigs</string>
    <string name="foodish_budget_tracker">Foodish Budget Tracker</string>
    <string name="enter_expense_name">Enter Expense Name</string>
    <string name="total_expense_php">Total Expense: PHP%1$s</string>
    <string name="enter_expense_amount_php">Enter Expense Amount(PHP)</string>
    <string name="add_expense">Add Expense</string>
    <string name="total_expense_php0_00">Total Expense: PHP0.00</string>
    <string name="bl_adobosagata">
         \u2022 3 pounds pork shoulder, cut into 2-inch cubes \n
         \u2022 1 onion, peeled and sliced thinly \n
         \u2022 1 head garlic, peeled and minced \n
         \u2022 ½ teaspoon peppercorns \n
         \u2022 2 bay leaves \n
         \u2022  1 cup water \n
         \u2022 ½ cup vinegar \n
         \u2022 ¼ cup soy sauce \n
         \u2022 1 tablespoon canola oil \n
         \u2022 1 cup coconut milk \n
         \u2022 2 Thai chili peppers, stemmed and chopped \n
         \u2022 Salt to taste \n
    </string>
    <string name="ins_adobosagata">
        1.	In a pot over medium heat, combine pork, onions, garlic, peppercorns, bay leaves, water, vinegar and soy sauce. Bring to a boil for about 5 minutes, skimming scum that floats on top. \n
        2.	Lower heat, cover and simmer for about 30 to 40 minutes or until meat is tender. Drain meat. Reserve the aromatics and 1 cup of the liquid. \n
        3.	In a wide pan over medium heat, heat oil. Add meat and aromatics and cook, stirring occasionally, until lightly browned. \n
        4.	Add reserved liquid, coconut milk, and chili peppers. \n
        5.	Lower heat, cover and continue to cook for about 15 to 20 minutes or until meat is completely cooked and sauce is reduced and thickened. \n
        6.	Season with salt to taste.  Serve hot. \n \n
        Reference: https://www.kawalingpinoy.com/adobo-sa-gata/
    </string>
    <string name="instructions">Instructions:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="adobo_sa_gata">Adobo sa Gata</string>
    <string name="sub_adobosagata">Cooking Time: 45 minutes (Good for 4-6 Persons)</string>
    <string name="batchoy_tagalog">Batchoy Tagalog</string>
    <string name="bl_batchoy_tagalog">
        \u2022 1 tablespoon canola oil \n
        \u2022 1 onion, peeled and sliced thinly \n
        \u2022 4 cloves garlic, peeled and minced \n
        \u2022 2 thumb-sized ginger, peeled and minced \n
        \u2022 ½ pound pork tenderloin, cut into strips \n
        \u2022 ¼ pound pork heart, about 1 piece, cut into thin strips \n
        \u2022 2 tablespoons fish sauce \n
        \u2022 6 cups water \n
        \u2022 ¼ pound pork liver, cut into thin strips \n
        \u2022 ¼ pound coagulated blood, drained and cut into cubes \n
        \u2022 salt and pepper to taste \n
        \u2022 2 ounces miswa \n
        \u2022 1 bunch fresh chili leaves, stems trimmed \n
    </string>
    <string name="ins_batchoy_tagalog">
        1.	In a large pot over medium heat, heat oil. Add onions, garlic, and ginger, and cook until softened. \n
        2.	Add pork and heart. Cook, stirring occasionally, until lightly browned. \n
        3.	Add fish sauce and cook for about 2 to 3 minutes. \n
        4.	Add water and bring to a boil, skimming scum that floats on top. \n
        5.	Lower heat, cover, and continue to cook for about 15 to 20 minutes or until meat is tender. \n
        6.	Increase heat to high and bring the broth to a rolling boil. \n
        7.	Add pork liver and cook, without stirring, for about 2 to 3 minutes. Stir and continue to cook for another 2 to 3 minutes. \n
        8.	Add coagulated blood and cook, without stirring, for about 2 to 3 minutes. Stir and continue to cook for about 8 to 10 minutes. \n
        9.	Season with salt and pepper to taste. \n
        10.	Add miswa and continue to cook for 1 to 2 minutes. \n
        11.	Add chili leaves, pressing down into the broth. Turn off the heat and cover to allow residual steam to cook leaves. Serve hot. \n \n
        Reference: https://www.kawalingpinoy.com/batchoy-tagalog/
    </string>
    <string name="chicken_adobo">Chicken Adobo</string>
    <string name="bl_chicken_adobo">
        \u2022 2 lbs chicken \n
        \u2022 3 pieces dried bay leaves \n
        \u2022 6 tablespoons soy sauce \n
        \u2022 4 tablespoons white vinegar \n
        \u2022 5 cloves garlic \n
        \u2022 1 1/2 cups water \n
        \u2022 3 tablespoons cooking oil \n
        \u2022 1 teaspoon sugar \n
        \u2022 1/4 teaspoon salt \n
        \u2022 1 teaspoon whole peppercorn \n
    </string>
    <string name="ins_chicken_adobo">
        1.	Combine chicken, soy sauce, and garlic in a large bowl. Mix well. Marinate the chicken for at least 1 hour. Note: the longer the time, the better \n
        2.	2 lbs chicken, 6 tablespoons soy sauce \n
        3.	Heat a cooking pot. Pour cooking oil. \n
        4.	3 tablespoons cooking oil \n
        5.	When the oil is hot enough, pan-fry the marinated chicken for 2 minutes per side. \n
        6.	Pour-in the remaining marinade, including garlic. Add water. Bring to a boil \n
        7.	1 1/2 cups water \n
        8.	Add dried bay leaves and whole peppercorn. Simmer for 30 minutes or until the chicken gets tender \n
        9.	3 pieces dried bay leaves, 1 teaspoon whole peppercorn \n
        10.	Add vinegar. Stir and cook for 10 minutes. \n
        11.	4 tablespoons white vinegar \n
        12.	Put-in the sugar, and salt. Stir and turn the heat off.Serve hot. Share and Enjoy! \n
        13.	1 teaspoon sugar, 1/4 teaspoon salt \n \n

        Reference: https://panlasangpinoy.com/filipino-chicken-adobo-recipe/#wprm-recipe-container-47216

    </string>
    <string name="sub_cook30_good24">Cooking time: 30 minutes (Good for 2-4 persons)</string>
    <string name="adobo">Adobo</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="send_otp">Send OTP</string>
    <string name="please_wait_30_seconds_before_resending_otp">Please wait 30 seconds before resending OTP.</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="phone_number_63">Phone Number (+63)</string>
</resources>