<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgxx">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foodish_title"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/aboutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/foodish_description"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mission"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foodish_mission"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vision"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foodish_vision"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/our_team"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/james"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mharvin"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aljon"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/julius"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alexander"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:gravity="center"/>


        </LinearLayout>
</ScrollView>
