<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".bottom_fragments.FavFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/orange"
            app:cardCornerRadius="25dp"
            >
            <ImageButton
                android:layout_width="170dp"
                android:layout_height="150dp"
                android:src="@drawable/adobo"
                android:scaleType="centerCrop"
                android:padding="-50dp"
                android:contentDescription="@string/adobos">
            </ImageButton>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adobo"
                android:gravity="center"
                android:layout_gravity="bottom"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/orange"
            app:cardCornerRadius="25dp"
            >
            <ImageButton
                android:layout_width="170dp"
                android:layout_height="150dp"
                android:src="@drawable/batchoytagalog"
                android:scaleType="centerCrop"
                android:padding="-50dp"
                android:contentDescription="@string/adobos">
            </ImageButton>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/batchoy_tagalog"
                android:gravity="center"
                android:layout_gravity="bottom"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>