<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".dishes.AdobosaGata"
    android:id="@+id/frg_adobosagata">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200sp"
                    android:src="@drawable/batchoytagalog"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/batchoy_tagalog">
                </ImageView>
                <!--            <Button-->
                <!--                android:id="@+id/vb_backhome"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:background="@drawable/baseline_keyboard_backspace_24"-->
                <!--                android:backgroundTint="@color/black"/>-->
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/orange"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="-30dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5sp"
                    tools:ignore="MissingConstraints">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/batchoy_tagalog"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_margin="6dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cooking_time_40_minutes_good_for_4_6_persons"
                        android:textAlignment="center"
                        android:layout_margin="2dp"/>

                    <View
                        android:layout_width="280dp"
                        android:layout_height="4dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/gray"
                        android:layout_marginHorizontal="50dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredients"
                        android:fontFamily="sans-serif"
                        android:textSize="18sp"
                        android:padding="5sp"/>

                    <TextView
                        android:id="@+id/tv_adobosagata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:layout_marginTop="3dp"
                        android:lineSpacingExtra="8sp"
                        android:padding="5sp"
                        android:text="@string/bl_batchoy_tagalog"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/instructions"
                        android:fontFamily="sans-serif"
                        android:textSize="18sp"
                        android:padding="5sp"/>

                    <TextView
                        android:id="@+id/ins_adobosagata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:lineSpacingExtra="8sp"
                        android:padding="5sp"
                        android:text="@string/ins_batchoy_tagalog"
                        android:textSize="17sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>